fixed section header button alignment

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,9 @@ h1 {
   text-align: center;
 }
 .collapsible {
-  margin:auto;
+  display: block;
   width: 60%;
+  margin:auto;
   box-sizing: border-box;
   border: none;
   background-color: gray;
